# 006_goal_agent

./: .gitignore  README.md  action.py  agent6.md  agent6.py  artifact.md  artifact_store.py  decision.py  mcp_client.py  mcp_server.py  memory.py  memory_backup.json  memory_req.md  perception.py  perception_req.md  project_evolution.md  pyproject.toml  required_for_assignment.md  requirements.txt  run_agent.py  schema.py  session_notes.md  utils.py
.claude/: settings.local.json
llm_gateway/: cache.py  main.py  providers.py  router.py  schemas.py
state/: memory.json  pop_capture.md  pop_captureA.md  pop_captureB.md  pop_captureC1.md  pop_captureC2.md  pop_captureD.md
tests/: test_fetch_url.py
