[project]
name = "goal-agent"
version = "0.1.0"
description = "Four-layer goal-directed agent with memory, perception, decision, and action"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jsonschema>=4.21",
    "mcp[cli]>=1.0",
    "ddgs",
    "crawl4ai",
    "tavily-python",
    "aiohttp>=3.9.5,<3.10",
    "truststore>=0.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
